# uibk_parallelization_23

./: job.sh
assignments/02/: CMakeLists.txt  pi_mpi.cpp  readme.md  stencil_mpi.cpp
code_students/src/setup/: physics.cpp
code_students/src/solver/: finite_volume_solver.cpp  reconstruction.cpp
code_students/tests/: test_time_integrator.cpp
docs/: index.html
